More responsive mobile changes Header links now wrap Action button border is on the anchor instead of the div, will no longer grow in size as the page shrinks

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ a {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .links {
@@ -145,6 +146,8 @@ img {
     display: flex;
     justify-content: space-evenly;
     padding: 32px 0px;
+    flex: 1;
+    gap: 5px;
 }
 
 .action-title {
@@ -167,6 +170,9 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.follow-button {
     border: 2px solid #F9FAF8;
     border-radius: 5px;
     font-weight: 900;
